--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  background: #2b5876; 
+  background: -webkit-linear-gradient(109.6deg,  rgba(255,24,134,1) 11.2%, rgba(252,232,68,1) 52%, rgba(53,178,239,1) 100.2%); 
+  background: linear-gradient(109.6deg,  rgba(255,24,134,1) 11.2%, rgba(252,232,68,1) 52%, rgba(53,178,239,1) 100.2%); 
+}
+
 .App {
   text-align: center;
 }
